# DatabricksPOC

./: .gitattributes  .gitignore  README.md  conftest.py-disablefornow  databricks.yml  pyproject.toml  pytest.ini.-use toml instead.txt  requirements-dev.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  ReadMe.md  copilot-instructions.md
.github/instructions/: example-extra-file-rules.instruction.md
.github/workflows/: ci.yml  dev-cd.yml  dev-pr.yml  dev.yml  main.yml  main.yml-old  manual-integration-test-poc.yml  manual-trigger-test-poc.yml  manual-trigger-validate-all-dab-targets.yml  prod-cd.yml  prod-pr.yml  staging-cd.yml  staging-cicd.yml  staging-pr.yml
devops/: README.md  user dev dab deploy.ipynb
docs/: AI Usage.md  AI refinements.md  Adding and selecting packages.md  After Merging to an Environment Branch.md  Before a Pull Request.md  But why is it like that.md  But why is it like that?!.md  Cost Visibility.md  DBX Environments.md  Databricks Limitations.md  Databricks Tips.md  Deployment Guide.md  Docs Reviewed By.md  Git Branch and Commit Naming.md  Git branch and commit naming.md  Good Practice from Elsewhere.md  How to review environments before merge.md  Jeremy_Feedback.md  Monitoring Environments and Compute.md  Naming Conventions.md  Orientation readme.md  Python.md  Questions.md  RAP guidance.md  README.md  TODO.md  Tags and Cost Visibility.md  Thoughts DAB git Release automated versioning.md  Using POC for Decision Making.md  deployment_guide.md  docs-readme.md  infastructure-architecture.md  jira-orientation-task.md  phil-feedback.md  project-architecture.md  python.md
docs/In Progress and Additional Docs/: Before Merge How to review environments.md  Out of scope consider in future.md  Serverless Compute Notes.md  Using POC for Decision Making.md
exclude-me-poc-test/: job-not-in-dabs.yml
notebooks/: README.md  notebook_better_secrets.ipynb  run_working_days_example.ipynb
notebooks/adhoc analysis/: TEMPLATE-adhoc-analysis-notebook.ipynb  TEMPLATE-for-readme-adhoc-ticket-folder.md  adhoc-analysis-README.md
notebooks/adhoc analysis/TD-123 0124 Carer Completions/: TD-123 readme.md  TD-123-0124 Carers.ipynb
notebooks/explorations/: New Notebook 2026-04-09 11_52_42.ipynb
notebooks/unit-tests/: ReadMe.md
notebooks/unit-tests-del/utils/: run_tests.py-worked  test_loader_5.py-worked
notebooks/unit-tests/utils/: Untitled Notebook 2025-12-16 16_15_04.ipynb  notebook_integration_ingestion_test.ipynb  test_loader_5.py-dbutils-fail
resources/: README.md
resources/configs/: dev.yml
resources/environments/: BROKEN_serverless_usage_policies.yml
resources/jobs/: create_db_connections.dontneedityml  readme.md
resources/jobs/setup/: create_procs_job.yml  create_procs_job.yml-broken
resources/jobs/utils/: full_data_refresh.yml
resources/pipeline/: ReadMe.md  ods_ingestion.yml  pipeline-ReadMe.md
resources/pipeline/ingest/: ods_ingestion.yml
resources/pipeline/silver/: isreporter_dlt.yml
resources/setup/: unity-catalog-try-later.yml
resources/test/: integration_test_job.yml
resources/variables/: data_architecture_constants.yml  env_serverless_usage_policy_constants.yml  serverless_usage_policy_constants.yml
scratch/: Untitled Notebook 2026-02-17 09_39_26.ipynb  dlt-ingestdeleteme-cluster.md.ipynb  scratch-readme.md
scratch-gitincludeforpoc/: README.md  create_db_connections.dontneedityml  deleteme.ipynb
scratch-gitincludeforpoc/dlt-instead-sp-for-unit/: DLT_reporter_pseudo_code.py  __init__.py  call_original_sp.ipynb  conftest.py  original sp for reference.ipynb  reporter_logic.py  test_runner.ipynb
scratch-gitincludeforpoc/dlt-instead-sp-for-unit/unit-tests-scratch/: test_reporter_logic.py
scratch-gitincludeforpoc/scratch-bits/: creds.ipynb  dont-source-controlled-sensitive-data-nb-outputs.ipynb  phil-experiment.ipynb  unity-catalog-try-later.yml
scratch-gitincludeforpoc/scratch-mlearn-dlt/: RealTimeIngestion.ipynb
scratch-gitincludeforpoc/scratch-module-consumer-route/: notebook_module_consumer.ipynb  py_module_consumer.py
scratch-gitincludeforpoc/scratch-module-route/: notebook_module.ipynb  py_module.py
setup/: Readme.md  copy-dbx-assistant-instructions.md  setup-Readme.md  setup_catalogs.sql  setup_temp_vol_storage.ipynb
src/: README.md  __init__.py  dlt_pipeline.py
src/gold/: linter-check.ipynb
src/ingestion/: CreateDatabaseConnections.dontneedipynb  ods_ingest - original for reference delete later.py  ods_ingest.py
src/procedures/: README.md  SP_IsReporter.ipynb
src/silver/: isreporter_dlt.py
src/transformations/: __init__.py  date_transforms.py
src/utils/: __init__.py  __init__.py-old-worked  loaders.py  reporter_logic.py
tests/: Manual_Only_Run_Tests.ipynb  README.md  Run_Lint.ipynb  Run_Tests.ipynb  Template_Scratch_Manual_Run_Test.ipynb  conftest.py  test-README.md
tests/data-quality-tests/: data-quality-tests-README.md
tests/data-quality-tests/bronze/ods/: conftest.py  ods-test-readme.md  readme.md  test_contact_details.py
tests/e2e-tests/: e2e-tests-README.md
tests/integration-tests/: README.md
tests/integration-tests/procedures/: Procedures-ReadME.md.ipynb  ReadME.md.ipynb  test_sp_isreporter.py
tests/integration-tests/utils/: test_loaders.py
tests/unit-tests/: DeleteMe.md  ReadMe.md
tests/unit-tests/transformations/: test_date_transformations.py
tests/unit-tests/utils/: test_loaders2 fail.py-fail  test_loaders_4.py  test_reporter_logic.py
tests/unit-tests/utils/fixtures/: org_data.csv
