[project]
name = "Workflow_POC"
version = "0.0.1"
authors = [{ name = "philip.tate@nhs.net" }]
description = "POC"
readme = "README.md"
requires-python = ">=3.10,<=3.13"
dependencies = [
    # Any dependencies for jobs and pipelines in this project can be added here
    # See also https://docs.databricks.com/dev-tools/bundles/library-dependencies
    #
    # LIMITATION: for pipelines, dependencies are cached during development;
    # add dependencies to the 'environment' section of your pipeline.yml file instead
]

# Using the dev group keeps the code light for prod but as not loaded into pipelines may find the need to move some into the dependencies section. We can make a staging group and tell pipelines to use it in the dab i expect.
[dependency-groups]
dev = [
    "pytest",
    "pytest-mock",      # Very useful for mocking dbutils later
    "databricks-dlt",
    "databricks-connect>=15.4,<15.5",
    "databricks.labs.pylint.all",
]

[project.scripts]
main = "Workflow_POC.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Wheel packing came in the template :) qqqq
[tool.hatch.build.targets.wheel]
packages = ["src"]

### Pylint

# we stall this currently in the notebook not preinstalled in the cluster but we need it to load
[tool.pylint.master]
load-plugins = ["databricks.labs.pylint.all"]

# doesnt work tried 1 to trigger it
[tool.pylint.format]
max-line-length = 125

#disable all to test if picked up
#disable = ["all"]
[tool.pylint.messages_control]
disable = [
    "C8920",       # Remove commented out code (too aggressive in notebooks)
    "C0303",       # Trailing whitespace
    "C0304",       # Missing final newline
    "C0413",       # Wrong import position (not always critical)
    "E0611",       # No name in module (common with Spark)
    "E0401",       # Unable to import (Spark notebooks / dynamic paths)
    "C0103",       # Variable name style (allow lowercase df, e, etc.)
    "W0511",       # TODO / FIXME comments
]

good-names = ["e", "i", "k", "n", "f", "v", "df"]

# qqqq is black setup and used?
[tool.black]
line-length = 125

[tool.pytest.ini_options]
minversion = "6.0"
# This tells pytest to look in 'tests' by default
testpaths = ["tests"]
# This is the "Magic Fix" for routing. It adds 'src' to the path automatically!
pythonpath = ["src"]
python_files = ["test_*.py"]
addopts = [
    "-v",
    "-s",
    "--tb=short"
]
markers = [
    "databricks: for example we might use this marker to exclude a specific unit test from git env test running so it only run in dbx env",
]